notes/hedgedoc_Deployment_notes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: hedgedoc
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: hedgedoc
    spec:
      containers:
      - env:
        - name: _DB_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: notes.ocf-notes.credentials.postgresql.acid.zalan.do
        - name: _DB_PASS
          valueFrom:
            secretKeyRef:
              key: password
              name: notes.ocf-notes.credentials.postgresql.acid.zalan.do
        - name: CMD_SESSION_SECRET
          valueFrom:
            secretKeyRef:
              key: session-secret
              name: hedgedoc
        - name: CMD_OAUTH2_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: oidc-client-secret
              name: hedgedoc
        - name: CMD_S3_BUCKET
          valueFrom:
            configMapKeyRef:
              key: BUCKET_NAME
              name: ocf-notes-bucket
        - name: CMD_S3_ACCESS_KEY_ID
          valueFrom:
            secretKeyRef:
              key: AWS_ACCESS_KEY_ID
              name: ocf-notes-bucket
        - name: CMD_S3_SECRET_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              key: AWS_SECRET_ACCESS_KEY
              name: ocf-notes-bucket
        - name: CMD_DOMAIN
          value: notes.ocf.berkeley.edu
        - name: CMD_PROTOCOL_USESSL
          value: 'true'
        - name: CMD_ALLOW_ANONYMOUS
          value: 'false'
        - name: CMD_ALLOW_ANONYMOUS_EDITS
          value: 'false'
        - name: CMD_EMAIL
          value: 'false'
        - name: CMD_ALLOW_EMAIL_REGISTER
          value: 'false'
        - name: CMD_OAUTH2_USER_PROFILE_URL
          value: https://idm.ocf.berkeley.edu/auth/realms/ocf/protocol/openid-connect/userinfo
        - name: CMD_OAUTH2_USER_PROFILE_USERNAME_ATTR
          value: preferred_username
        - name: CMD_OAUTH2_USER_PROFILE_DISPLAY_NAME_ATTR
          value: name
        - name: CMD_OAUTH2_USER_PROFILE_EMAIL_ATTR
          value: email
        - name: CMD_OAUTH2_TOKEN_URL
          value: https://idm.ocf.berkeley.edu/auth/realms/ocf/protocol/openid-connect/token
        - name: CMD_OAUTH2_AUTHORIZATION_URL
          value: https://idm.ocf.berkeley.edu/auth/realms/ocf/protocol/openid-connect/auth
        - name: CMD_OAUTH2_CLIENT_ID
          value: hedgedoc
        - name: CMD_OAUTH2_PROVIDERNAME
          value: OCF
        - name: CMD_OAUTH2_SCOPE
          value: openid email profile
        - name: CMD_DB_URL
          value: postgres://$(_DB_USER):$(_DB_PASS)@ocf-notes:5432/notes?ssl=no-verify
        - name: CMD_DB_DIALECT
          value: postgres
        - name: CMD_S3_ENDPOINT
          value: https://o3.ocf.io
        image: quay.io/hedgedoc/hedgedoc:1.9.7-alpine
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /keycloak.pem
          name: keycloak-pem
          subPath: keycloak.pem
      volumes:
      - configMap:
          name: keycloak-pem
        name: keycloak-pem
