notes/hedgedoc_Service_notes.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    transpire.ocf.io/deployment: hedgedoc
